<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.abdullahaaf.newtambalban.MainActivityMaps">
    <android.support.v7.widget.CardView
        xmlns:card_view = "http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/card_view_1"
        android:layout_height="@dimen/card_height"
        android:layout_gravity="center"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_padding"
            >
            <FrameLayout
                android:id="@+id/framelayout"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/frame_width"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:layout_gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageview"
                    android:src="@drawable/mac_icon"
                    android:clickable="false"
                    />
            </FrameLayout>
            <TextView
                android:id="@+id/title_text_view"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_toEndOf="@+id/framelayout"
                android:layout_width="wrap_content"
                android:text="@string/title_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <TextView
                android:id="@+id/my_text_view"
                android:layout_below="@+id/title_text_view"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_toEndOf="@+id/framelayout"
                android:layout_width="wrap_content"
                android:text="@string/detail_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

            <TextView
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_lokasi"
                android:layout_below="@+id/my_text_view"
                android:layout_toEndOf="@+id/framelayout"
                android:layout_marginTop="5dp"
                android:text="Lokasi Lat-Long : "
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                />

            <TextView
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_latitude"
                android:layout_below="@+id/text_view_lokasi"
                android:layout_toEndOf="@+id/framelayout"
                android:text="@string/detail_latitude"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_longitude"
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_below="@+id/text_view_latitude"
                android:layout_toEndOf="@+id/framelayout"
                android:text="@string/detail_longitude"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/map_satu"
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/text_view_longitude"
                android:layout_toEndOf="@+id/framelayout"

                android:text="See on Maps"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view = "http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/card_view_2"
        android:layout_height="@dimen/card_height"
        android:layout_below="@+id/card_view_1"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/card_padding"
            >
            <FrameLayout
                android:id="@+id/framelayout_2"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/frame_width"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:layout_gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageview_2"
                    android:src="@drawable/mac_icon"
                    android:clickable="false"
                    />
            </FrameLayout>
            <TextView
                android:id="@+id/title_text_view_2"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_toEndOf="@+id/framelayout_2"
                android:layout_width="wrap_content"
                android:text="@string/title_text_2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <TextView
                android:id="@+id/my_text_view_2"
                android:layout_below="@+id/title_text_view_2"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_toEndOf="@+id/framelayout_2"
                android:layout_width="wrap_content"
                android:text="@string/detail_text_2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

            <TextView
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_lokasi_2"
                android:layout_below="@+id/my_text_view_2"
                android:layout_toEndOf="@+id/framelayout_2"
                android:layout_marginTop="5dp"
                android:text="Lokasi Lat-Long : "
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                />

            <TextView
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_latitude_2"
                android:layout_below="@+id/text_view_lokasi_2"
                android:layout_toEndOf="@+id/framelayout_2"
                android:text="@string/detail_latitude_2"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_longitude_2"
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_below="@+id/text_view_latitude_2"
                android:layout_toEndOf="@+id/framelayout_2"
                android:text="@string/detail_longitude_2"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/map_dua"
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/text_view_longitude_2"
                android:layout_toEndOf="@+id/framelayout_2"

                android:text="See on Maps"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>
